[package]
name = "nanonet"
version = "0.1.0"
authors = ["3rror"]
edition = "2024"
description = "A high-performance, asynchronous networking library for Rust, powered by a lean and robust C core.one of the smallest server lin in rust."
license = "MIT"
repository = "https://github.com/3Rr0RHACK3R/nanonet-rs"
keywords = ["networking", "async", "io-completion-port", "iocp", "performance", "windows"]
categories = ["network-programming", "asynchronous"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"